--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toDoList</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet" />
     <link href="style/container.css" rel="stylesheet" />
     <link href="style/form.css" rel="stylesheet" />
     <link href="style/list.css" rel="stylesheet" />
-    <link href="font/fontello.css" rel="stylesheet" />
+    <link href="style/tasks.css" rel="stylesheet" />
+    <link href="style/buttons.css" rel="stylesheet" />
     <script defer src="script/script.js"></script>
 </head>
 
@@ -27,13 +30,25 @@
                         <input class="form__input js-newTask" type="text" placeholder="Co jest do zrobienia?" autofocus>
                     </label>
                     <label>
-                        <button class="form__button">Dodaj zadanie</button>
+                        <button class="form__button ">Dodaj zadanie</button>
                     </label>
                 </form>
             </div>
         </div>
         <div class="containers">
-            <div class="container__item container__item--text">Lista zadań</div>
+            <div class="container__item container__item--section">
+                <div class="container__item--text">Lista zadań</div>
+                <div class="buttons js-buttons">
+                    <button class="buttons__button js-toggleHideDoneTasks">
+                        
+                    </button>
+                </div>
+                <div class="buttons js-buttons">
+                    <button class="buttons__button js-markAllDone">
+                        
+                    </button>
+                </div>
+            </div>
             <div class="container__item">
                 <ul class="list js-tasks"></ul>
             </div>
